k8s/seclab-k8s.yaml
apiVersion: v1
kind: Namespace
metadata: { name: app, labels: { projet: seclab } }
---
apiVersion: v1
kind: Namespace
metadata: { name: data, labels: { projet: seclab } }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny-all, namespace: app }
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: allow-web-ingress, namespace: app }
spec:
  podSelector: { matchLabels: { app: nginx } }
  policyTypes: [Ingress]
  ingress:
    - ports:
        - { protocol: TCP, port: 8080 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: default-deny-all, namespace: data }
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: allow-dns-egress, namespace: app }
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
    - to: []
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: allow-acme-solver, namespace: app }
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - { protocol: TCP, port: 8089 }
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: nginx, namespace: app }
spec:
  replicas: 2
  selector: { matchLabels: { app: nginx } }
  template:
    metadata: { labels: { app: nginx } }
    spec:
      serviceAccountName: sa-nginx
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: nginx
          image: ghcr.io/marouane010/cloudyf:IMAGE_TAG
          ports: [{ containerPort: 8080 }]
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities: { drop: [ALL] }
          volumeMounts:
            - { name: tmp, mountPath: /tmp }
      volumes:
        - { name: tmp, emptyDir: {} }
---
apiVersion: v1
kind: Service
metadata: { name: nginx, namespace: app }
spec:
  type: ClusterIP
  selector: { app: nginx }
  ports: [{ port: 80, targetPort: 8080 }]
